--- a/templates/emails/layout/footer.html.twig
+++ b/templates/emails/layout/footer.html.twig
@@ -1,18 +1,15 @@
 <p>
-    L'équipe d'AZERTY Solutions Informatiques vous remercie de votre confiance.
-</p>
-<p>
     --------------------------------
 </p>
 <p>
-    AZERTY Solutions Informatiques
+<b> AZERTY Solutions Informatiques </b>
+</p>
+<p >
+<div> <img src="cid:location"  width="20px" > 38 rue de la station <div><span style="padding-left: 25px">Franconville 95130</p> </p>
 </p>
 <p>
-    38 rue de la station 95130, Franconville
+    <img src="cid:whatsapp"  width="20px"></a> +33661699422
 </p>
 <p>
-    <img src="cid:whatsapp"  width="20px"></a> <span style="fontsize:20px">+33661699422</span>
-</p>
-<p>
-     01 34 15 52 32
+    <img src="cid:phone"  width="20px"> 01 34 15 52 32
 </p>
