--- a/templates/emails/mailDepot.html.twig
+++ b/templates/emails/mailDepot.html.twig
@@ -1,6 +1,6 @@
 <h1>Dépot chez AZERTY Solutions Informatiques</h1>
 <p>Bonjour, {{personne}} {{nom}} {{prenom}} </p>
-<p>Merci beaucoup de nous avoir contacté ! </p>
+<p>Merci beaucoup de nous avoir contactés ! </p>
 <p>Nous accusons, ce jour le {{date|date('d M Y H:i')|format_datetime('medium','short',locale='fr')}}, bonne réception du formulaire que vous avez renseigné, pour la prise en charge de votre appareil :</p>
 <ul>
     <li><b>Marque </b> : {{marque}}</li>
