--- a/templates/emails/mailEtat.html.twig
+++ b/templates/emails/mailEtat.html.twig
@@ -16,7 +16,7 @@
 	<img src="cid:etat">
 	</br>
 	<p>
-		Nos techniciens mettent tout en œuvre afin de vous apporter un diagnostic, et ceux dans les plus brefs délais.
+		Nos techniciens mettent tout en œuvre afin de vous apporter un diagnostic, et ce dans les plus brefs délais.
 	</p>
 	<p>
 		Cordialement.
@@ -79,7 +79,7 @@
 	<img src="cid:etat">
 	</br>
 	<p>
-		En espérant que vous ayez apprécié nos services, nous vous invitons si vous le désiré, à nous faire part de votre avis sur 
+		En espérant que vous avez apprécié nos services, nous vous invitons si vous le désirez, à nous faire part de votre avis sur 
 		<a href="https://www.google.com/search?q=azerty+solutions+informatiques&sxsrf=ALeKk02eVJbX_tE7972gR-Cn4zFqWvNrAw%3A1620743094199&source=hp&ei=tpOaYKDwCcXggweK3IXYBA&iflsig=AINFCbYAAAAAYJqhxoCVe1FJpslRDtIC2cQWBa2dawvN&oq=azert&gs_lcp=Cgdnd3Mtd2l6EAMYATIECCMQJzIICAAQxwEQrwEyBQgAELEDMgIIADICCC4yAggAMgIIADICCAAyAggAMgIIADoHCCMQ6gIQJzoICAAQsQMQgwE6DggAELEDEIMBEMcBEKMCOgQILhBDOgQIABBDOgUILhCxAzoHCC4QsQMQQ1CGDFjBEmCDHmgBcAB4AIABzAGIAdwDkgEFNC4wLjGYAQCgAQGqAQdnd3Mtd2l6sAEK&sclient=gws-wiz#lrd=0x47e6670ec216aaab:0xab1a76ada69c8193,1,,,">Google</a>.
 	</p>
 	
