--- a/templates/tache/_delete_form.html.twig
+++ b/templates/tache/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('tache_delete', {'id': tache.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ tache.id) }}">
-    <button class="btn">Delete</button>
+    <button title="Supprimer" style="font-size : 20px;" class="btn btn-delete btn-danger"><i class="bi bi-trash-fill white"></i></button>
 </form>
