--- a/templates/client/modal/modal.html.twig
+++ b/templates/client/modal/modal.html.twig
@@ -1,3 +1,6 @@
+{% if client.id is not defined %}
+  {% set client = tache.appareil.client %}
+{% endif %}
 <div class="modal modal-client fade" id="cardClient{{client.id}}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog client">
     <div class="modal-content mt-5">
