--- a/templates/tache/index.html.twig
+++ b/templates/tache/index.html.twig
@@ -13,27 +13,35 @@
                     <th>Client</th>
                     <th>Appareil</th>
                     <th>Description</th>
-                    <th>actions</th>
+                    <th>Actions</th>
                 </tr>
             </thead>
             <tbody>
-            {% for tache in taches %}
+            {% for tache in taches | sort((a, b) => b.date <=> a.date) %}
+                
                 {% set counter = ( counter | default(0) ) + 1 %}
                 {% if counter % 2 %}
-                    <tr class='tr_no_color select'>
+                    <tr class='ligne_tache tr_no_color select'>
                 {% else %}
-                    <tr class='tr_color select'>
+                    <tr class='ligne_tache tr_color select'>
                 {% endif %}
                     <td>{{ tache.user.login }}</td>
                     <td>{{ tache.appareil.client.nom }} {{ tache.appareil.client.prenom }}</td>
                     <td>{{ tache.appareil.marque }} {{ tache.appareil.modele }}</td>
                     <td>{{ tache.description|striptags|length > 30 ? tache.description|striptags|slice(0, 30) ~ '....' : tache.description|striptags }}</td>
                     <td>
-                        <a href="{{ path('tache_show', {'id': tache.id}) }}">show</a>
-                        <a href="{{ path('tache_edit', {'id': tache.id}) }}">edit</a>
-                        {{ include('tache/_delete_form.html.twig') }}
+                        <button type="button" class="btn btn-primary" data-bs-toggle="modal" title="Afficher les informations client"  data-bs-target="#cardClient{{tache.appareil.client.id}}">
+                            <i  width='25%' class="bi bi-person-bounding-box show-info-client"></i>
+                        </button>
+                        <a title="Modifier cette tâche" class="btn btn-secondary" href="{{ path('tache_edit', {'id': tache.id}) }}"><img class="edit" width='25px' src="{{asset('./images/icon-edit.png')}}"/></a>
+                        {% if  tache.do %}
+                                <a title="Retirer la tache" class="btn btn-warning tache-non-fait" value="{{ tache.do }}" href="{{ path('tache_do', {'id': tache.id}) }}"><i class="bi bi-x-square-fill white"></i></a>
+                        {% else %}
+                                <a title="Tâche réalisé" class="btn btn-success tache-fait " value="{{ tache.do }}" href="{{ path('tache_do', {'id': tache.id}) }}"><i class="bi bi-check-square-fill"></i></a>
+                        {% endif %}
                     </td>
                 </tr>
+                {{ include('client/modal/modal.html.twig') }}
             {% else %}
                 <tr>
                     <td colspan="3" class="white">En attente de nouvelles tâches...</td>
