--- a/templates/client/show_all.html.twig
+++ b/templates/client/show_all.html.twig
@@ -57,7 +57,7 @@
                                 <td class='h-maque' >{{ client.appareil.marque }} </td>
                                 <td class='h-modele'>{{ client.appareil.modele }} </td>
                                 <td class='h-ns' >{{ client.appareil.ns }} </td>
-                                <td class='h-msp'>{{ client.appareil.mdp }} </td>
+                                <td class='h-mdp'>{{ client.appareil.mdp }} </td>
                                 {% if client.appareil.chargeur == 1 %}
                                 <td class='h-chargeur'> <img  class='check' src="{{asset('./images/check.png')}}" width="40px"/></td>
                                 {% else %}
