--- a/templates/layout/navbar.html.twig
+++ b/templates/layout/navbar.html.twig
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-dark navbar-dark ">
+{#<nav class="navbar navbar-expand-lg bg-dark navbar-dark ">
   <div class="container-fluid">
     <div class="collapse navbar-collapse" id="navbarScroll">
       <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
@@ -39,9 +39,56 @@
         {% endif %}
       {#<li class="nav-item">
           <a class="nav-link" href="{{ path('panier') }}"><img src="{{ asset('/images/navbar/icon-caddie.png') }}" width="20"/></a>
-        </li>#}
+        </li>
       </ul>
     
     </div>
+  </div>
+</nav>#}
+
+<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="{{ path('client_index') }}"><img src="{{ asset('./images/azerty.jpg') }}" width="30px"></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle white"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
+             <i class="bi bi-people-fill white mr-2"></i> Clients
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="{{ path('client_index') }}" > <i class="bi bi-people-fill mr-2"></i> Clients par mois</a></li>
+            <li><a class="dropdown-item" href="{{ path('client_show_all') }}" > <i class="bi bi-calendar-event-fill mr-2"></i> Historiques</a></li>
+            <li><a class="dropdown-item" href="{{ path('prioritaire_index') }}"><i class="bi bi-exclamation-triangle-fill mr-2 "></i> Prioritaire</a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link white" aria-current="page" href="{{ path('tache_index') }}"><i class="bi bi-list-ul mr-2"></i></i> Tâches à faire</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link white" aria-current="page" href="{{ path('app_appel_index') }}"> <i class="bi bi-telephone-fill mr-2"></i> Rappel</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link white" aria-current="page" href="{{ path('app_rdv_index') }}"><i class="bi bi-calendar-event-fill mr-2"></i>Rendez-vous</a>
+        </li>
+        {% if is_granted('ROLE_ADMIN') or is_granted('ROLE_SUPER_ADMIN') %}
+          <li class="nav-item">
+            <a class="nav-link white" aria-current="page" href="{{ path('user_index') }}"> <i class="bi bi-person-workspace mr-2"></i> Utilisateurs </a>
+          </li>
+        {% endif %}
+      </ul>
+     <ul class="navbar-nav  d-flex" style="--bs-scroll-height: 100px;">
+
+        {% if app.user %}
+        <li class="nav-item">
+          <a class="nav-link white"  href="{{ path('user_show', {'id':  app.user.id} )}}"><i class="bi bi-person-circle mr-2"></i> Mon compte </a>
+        </li>
+          <li class="nav-item">
+            <a class="nav-link white" href="{{ path('app_logout')}}"><i class="bi bi-box-arrow-right mr-2"></i>  Déconnexion </a>
+          </li>
+        {% endif %}
+      </ul>
   </div>
 </nav>
